--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "node-telegram-bot-api": "^0.40.0"
+    "express": "^4.17.1",
+    "needle": "^2.3.3",
+    "node-telegram-bot-api": "^0.40.0",
+    "request": "^2.88.2",
+    "tress": "^1.1.4"
   },
   "engines": {
     "node": "13.11"
