--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "needle": "^2.3.3",
+    "node-fetch": "^2.6.0",
     "node-telegram-bot-api": "^0.40.0",
     "request": "^2.88.2",
     "tress": "^1.1.4"
